fixed list.of problem